# src/routes/achvmntInfoCtrlRoutes.js
@@ -104,12 +104,13 @@ const deleteAchvmntInfoCtrl = async (req,res) => {
 
 
 const validateCrtAchvmntInfoCtrl = (body) => {
-    let response = body.data.map((data) => {
+    let response = body?.data.map((data) => {
         if(!data || Object.keys(data).length === 0 || JSON.stringify(data) === "{}")    return false;
         if(typeof data?.key !== "number") return false;
         if(typeof data?.achvmntTitle !== "string")   return false;
         if(data?.url && typeof data?.url !== "string")  return false;
         if(data?.description && typeof data?.description !== "string")  return false;
+        if(data?.achvmntProfileCtrl && typeof data?.achvmntProfileCtrl !== "string")  return false;
     })
 
     if(response.includes(false))   return false;
@@ -122,6 +123,7 @@ const validateUptAchvmntInfoCtrl = (data) => {
     if(data?.body?.achvmntTitle && typeof data?.body?.achvmntTitle !== "string")   return false;
     if(data?.body?.url && typeof data?.body?.url !== "string")  return false;
     if(data?.body?.description && typeof data?.body?.description !== "string")  return false;
+    if(data?.body?.achvmntProfileCtrl && typeof data?.body?.achvmntProfileCtrl !== "string")  return false;
     return true;
 }
 
